all work. Testing 4 client in localhost